# acolite

./: README.md  pyproject.toml
acolite/acolite/: identify_bundle.py
acolite/gf/: l1_convert.py
config/defaults/: GF2_PMS1.txt  GF2_PMS2.txt  GF7_DLC.txt
data/RSR/: GF2_PMS1.txt  GF2_PMS2.txt  GF7_DLC.txt
