[project]
name = "acolite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal>=3.11.4",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "pyproj>=3.7.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]
